Dodano nagłówek strony

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
+
+    
     <title>Document</title>
 </head>
 <body>
-    <h2>Jakis test nowa werjsa lol</h2>
+    <div class="tab-header">
+          <a href="#" class="tab-item">STRONA GŁÓWNA</a>
+          <a href="sklep.html" class="tab-item">SKLEP</a>
+          <a href="o-nas.html" class="tab-item">O NAS</a>
+          <a href="kontakt.html" class="tab-item">KONTAKT</a>
+    </div>
+    <div class="welcome-section">
+        <img src="">
+    </div>
 </body>
 </html>
