sekcja powitalna (flex)

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
-    <title>Document</title>
+    <title>Sneaker-Stajnia</title>
 </head>
 <body>
     <div class="tab-header">
@@ -19,8 +20,19 @@
           <a href="o-nas.html" class="tab-item">O NAS</a>
           <a href="kontakt.html" class="tab-item">KONTAKT</a>
     </div>
-    <div class="welcome-section">
-        <img src="">
+    <div id="page-content">
+        <div id="welcome-text">
+            <h1 id="welcome-title">Buty takie, jakie chcesz</h1>
+            <a href="" id="welcome-subtitle">Sprawdź nasze modele →</a>
+        </div>
+    <div class="about-us">
+        <h2 id="about-us-title">Kim jesteśmy?</h2>
+        <div>
+            <label id="about-us-content">Sneaker Stajnia to pierwszy w Polsce sklep, który zaoferował na rodzimym rynku najbardziej limitowane i pożądane ubrania oraz modele butów. Od początku naszej działalności konsekwentnie zmniejszaliśmy dystans pomiędzy polskim i światowym rynkiem mody streetwearowej. Swoją markę zbudowaliśmy w oparciu o prawdziwą pasje i autentyczność zyskując dzięki temu zaufanie odbiorców, którzy szukając unikatowych produktów, doceniają naszą ofertę i bezpieczeństwo zakupów</label>
+            <label id="about-us-bottom"></label>
+        </div>
     </div>
+    </div>
+    
 </body>
 </html>
