dodano about-us

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
+
+
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Sneaker-Stajnia</title>
@@ -21,18 +24,33 @@
           <a href="kontakt.html" class="tab-item">KONTAKT</a>
     </div>
     <div id="page-content">
-        <div id="welcome-text">
+
+        <div id="welcome-text" class="title-container">
             <h1 id="welcome-title">Buty takie, jakie chcesz</h1>
             <a href="" id="welcome-subtitle">Sprawdź nasze modele →</a>
         </div>
-    <div class="about-us">
-        <h2 id="about-us-title">Kim jesteśmy?</h2>
-        <div>
-            <label id="about-us-content">Sneaker Stajnia to pierwszy w Polsce sklep, który zaoferował na rodzimym rynku najbardziej limitowane i pożądane ubrania oraz modele butów. Od początku naszej działalności konsekwentnie zmniejszaliśmy dystans pomiędzy polskim i światowym rynkiem mody streetwearowej. Swoją markę zbudowaliśmy w oparciu o prawdziwą pasje i autentyczność zyskując dzięki temu zaufanie odbiorców, którzy szukając unikatowych produktów, doceniają naszą ofertę i bezpieczeństwo zakupów</label>
-            <label id="about-us-bottom"></label>
+
+        <div class="about-us">
+            <h2 id="about-us-title">Kim jesteśmy?</h2>
+            <ul>
+                <div id="about-us-content">
+                   <label id="about-us-text">Sneaker Stajnia to pierwszy w Polsce sklep, który zaoferował na rodzimym rynku najbardziej limitowane i pożądane ubrania oraz modele butów. Od początku naszej działalności konsekwentnie zmniejszaliśmy dystans pomiędzy polskim i światowym rynkiem mody streetwearowej. Swoją markę zbudowaliśmy w oparciu o prawdziwą pasje i autentyczność zyskując dzięki temu zaufanie odbiorców, którzy szukając unikatowych produktów, doceniają naszą ofertę i bezpieczeństwo zakupów</label>
+                   <br><br>
+                   <a href="" id="about-us-href">Poznaj nas lepiej →</a>
+                </div> 
+
+                <img id="about-us-image" src="lighter.jpeg">
+            </ul>
         </div>
+
+        <div id="example-pairs">
+            <div class="title-container">
+                <h1>Przykładowe pary</h1>
+                <a href="">Sprawdź nasze modele →</a>
+            </div>
+        </div>
+
+
     </div>
-    </div>
-    
 </body>
 </html>
