dodano przykladowe pary

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="about-us">
             <h2 id="about-us-title">Kim jesteśmy?</h2>
-            <ul>
+            <ul id="about-us-divide">
                 <div id="about-us-content">
                    <label id="about-us-text">Sneaker Stajnia to pierwszy w Polsce sklep, który zaoferował na rodzimym rynku najbardziej limitowane i pożądane ubrania oraz modele butów. Od początku naszej działalności konsekwentnie zmniejszaliśmy dystans pomiędzy polskim i światowym rynkiem mody streetwearowej. Swoją markę zbudowaliśmy w oparciu o prawdziwą pasje i autentyczność zyskując dzięki temu zaufanie odbiorców, którzy szukając unikatowych produktów, doceniają naszą ofertę i bezpieczeństwo zakupów</label>
                    <br><br>
@@ -44,10 +44,101 @@
         </div>
 
         <div id="example-pairs">
-            <div class="title-container">
-                <h1>Przykładowe pary</h1>
-                <a href="">Sprawdź nasze modele →</a>
+            <div id="example-pairs-header-container">
+                <h1 id="example-pairs-title">Przykładowe pary</h1>
+                <a id="example-pairs-subtitle" href="">Sprawdź nasze modele →</a>
             </div>
+            <br>
+            <ul id="sneaker-offer-list">
+                <div id="sneaker-offer">
+                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-preview" src="jordan.png">
+
+                    <div id="sneaker-offer-footer">
+                        <div id="price-container">
+                            <h5 id="price-tag">1899PLN</h5>
+                        </div>
+                        <div id="add-to-basket">
+                            <img id="basket" src="koszyk.png">
+                        </div>
+                    </div>
+
+                </div>
+                <div id="sneaker-offer">
+                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-preview" src="jordan.png">
+
+                    <div id="sneaker-offer-footer">
+                        <div id="price-container">
+                            <h5 id="price-tag">1899PLN</h5>
+                        </div>
+                        <div id="add-to-basket">
+                            <img id="basket" src="koszyk.png">
+                        </div>
+                    </div>
+
+                </div>
+                <div id="sneaker-offer">
+                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-preview" src="jordan.png">
+
+                    <div id="sneaker-offer-footer">
+                        <div id="price-container">
+                            <h5 id="price-tag">1899PLN</h5>
+                        </div>
+                        <div id="add-to-basket">
+                            <img id="basket" src="koszyk.png">
+                        </div>
+                    </div>
+
+                </div>
+            </ul>
+            <ul id="sneaker-offer-list">
+                <div id="sneaker-offer">
+                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-preview" src="jordan.png">
+
+                    <div id="sneaker-offer-footer">
+                        <div id="price-container">
+                            <h5 id="price-tag">1899PLN</h5>
+                        </div>
+                        <div id="add-to-basket">
+                            <img id="basket" src="koszyk.png">
+                        </div>
+                    </div>
+
+                </div>
+                <div id="sneaker-offer">
+                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-preview" src="jordan.png">
+
+                    <div id="sneaker-offer-footer">
+                        <div id="price-container">
+                            <h5 id="price-tag">1899PLN</h5>
+                        </div>
+                        <div id="add-to-basket">
+                            <img id="basket" src="koszyk.png">
+                        </div>
+                    </div>
+
+                </div>
+                <div id="sneaker-offer">
+                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-preview" src="jordan.png">
+
+                    <div id="sneaker-offer-footer">
+                        <div id="price-container">
+                            <h5 id="price-tag">1899PLN</h5>
+                        </div>
+                        <div id="add-to-basket">
+                            <img id="basket" src="koszyk.png">
+                        </div>
+                    </div>
+
+                </div>
+            </ul>
+
+
         </div>
 
 
