--- a/index.html
+++ b/index.html
@@ -142,6 +142,39 @@
         </div>
 
 
+        <div id="footer">
+            <div id="footer-contact">
+                <h2 class="footer-title">Sneaker Stajnia Kraków</h2>
+                <div id="kontakt-content">
+                    <h4 class="footer-content">Mokotowska 24, 00-553 Kraków</h4>
+                    <a class="footer-content"> pon. - sob. 11:00 - 19:00</a><br>
+                    <a class="footer-content">+48 536 848 534</a><br>
+                    <a class="footer-content">kontakt@sneakerstajnia.com</a>
+                </div>
+            </div>
+            <div id="footer-socials">
+                <h2 class="footer-title">Social media</h2>
+                <img class="footer-icon" src="instagram.svg"><a class="footer-content">Instagram</a><br>
+                <a class="footer-content">YouTube</a><br>
+                <a class="footer-content">Facebook</a><br>
+                <a class="footer-content">TikTok</a>
+            </div>
+            <div id="footer-menu">
+                <h2 class="footer-title">Menu strony</h2>
+                <a class="footer-content">Strona główna</a><br>
+                <a class="footer-content">Sklep</a><br>
+                <a class="footer-content">O nas</a><br>
+                <a class="footer-content">Kontakt</a>
+            </div>
+
+            <div id="info">
+                <h2 class="footer-title">Informacje</h2>
+                <a class="footer-content">Polityka prywatności</a><br>
+                <a class="footer-content">Regulamin sklepu</a>
+            </div>
+        </div>
+
+
     </div>
 </body>
 </html>
