--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div id="welcome-text" class="title-container">
             <h1 id="welcome-title">Buty takie, jakie chcesz</h1>
-            <a href="" id="welcome-subtitle">Sprawdź nasze modele →</a>
+            <a href="sklep.html" id="welcome-subtitle">Sprawdź nasze modele →</a>
         </div>
 
         <div class="about-us">
@@ -49,95 +49,84 @@
                 <a id="example-pairs-subtitle" href="">Sprawdź nasze modele →</a>
             </div>
             <br>
-            <ul id="sneaker-offer-list">
-                <div id="sneaker-offer">
-                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
-                    <img id="sneaker-preview" src="jordan.png">
-
-                    <div id="sneaker-offer-footer">
-                        <div id="price-container">
-                            <h5 id="price-tag">1899PLN</h5>
+            <ul id="sneaker-example-list">
+                <div id="sneaker-example">
+                    <h5 id="sneaker-example-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-example-preview" src="jordan.png">
+                    <div id="sneaker-example-offer-footer">
+                        <div id="example-price-container">
+                            <h5 id="example-price-tag">1899PLN</h5>
                         </div>
-                        <div id="add-to-basket">
-                            <img id="basket" src="koszyk.png">
+                        <div id="example-add-to-basket">
+                            <img id="example-basket" src="koszyk.png">
                         </div>
                     </div>
-
                 </div>
-                <div id="sneaker-offer">
-                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
-                    <img id="sneaker-preview" src="jordan.png">
 
-                    <div id="sneaker-offer-footer">
-                        <div id="price-container">
-                            <h5 id="price-tag">1899PLN</h5>
+                <div id="sneaker-example">
+                    <h5 id="sneaker-example-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-example-preview" src="jordan.png">
+                    <div id="sneaker-example-offer-footer">
+                        <div id="example-price-container">
+                            <h5 id="example-price-tag">1899PLN</h5>
                         </div>
-                        <div id="add-to-basket">
-                            <img id="basket" src="koszyk.png">
+                        <div id="example-add-to-basket">
+                            <img id="example-basket" src="koszyk.png">
                         </div>
                     </div>
-
                 </div>
-                <div id="sneaker-offer">
-                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
-                    <img id="sneaker-preview" src="jordan.png">
-
-                    <div id="sneaker-offer-footer">
-                        <div id="price-container">
-                            <h5 id="price-tag">1899PLN</h5>
+                <div id="sneaker-example">
+                    <h5 id="sneaker-example-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-example-preview" src="jordan.png">
+                    <div id="sneaker-example-offer-footer">
+                        <div id="example-price-container">
+                            <h5 id="example-price-tag">1899PLN</h5>
                         </div>
-                        <div id="add-to-basket">
-                            <img id="basket" src="koszyk.png">
+                        <div id="example-add-to-basket">
+                            <img id="example-basket" src="koszyk.png">
                         </div>
                     </div>
-
                 </div>
             </ul>
-            <ul id="sneaker-offer-list">
-                <div id="sneaker-offer">
-                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
-                    <img id="sneaker-preview" src="jordan.png">
-
-                    <div id="sneaker-offer-footer">
-                        <div id="price-container">
-                            <h5 id="price-tag">1899PLN</h5>
+            <ul id="sneaker-example-list">
+                <div id="sneaker-example">
+                    <h5 id="sneaker-example-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-example-preview" src="jordan.png">
+                    <div id="sneaker-example-offer-footer">
+                        <div id="example-price-container">
+                            <h5 id="example-price-tag">1899PLN</h5>
                         </div>
-                        <div id="add-to-basket">
-                            <img id="basket" src="koszyk.png">
+                        <div id="example-add-to-basket">
+                            <img id="example-basket" src="koszyk.png">
                         </div>
                     </div>
-
                 </div>
-                <div id="sneaker-offer">
-                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
-                    <img id="sneaker-preview" src="jordan.png">
 
-                    <div id="sneaker-offer-footer">
-                        <div id="price-container">
-                            <h5 id="price-tag">1899PLN</h5>
+                <div id="sneaker-example">
+                    <h5 id="sneaker-example-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-example-preview" src="jordan.png">
+                    <div id="sneaker-example-offer-footer">
+                        <div id="example-price-container">
+                            <h5 id="example-price-tag">1899PLN</h5>
                         </div>
-                        <div id="add-to-basket">
-                            <img id="basket" src="koszyk.png">
+                        <div id="example-add-to-basket">
+                            <img id="example-basket" src="koszyk.png">
                         </div>
                     </div>
-
                 </div>
-                <div id="sneaker-offer">
-                    <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
-                    <img id="sneaker-preview" src="jordan.png">
-
-                    <div id="sneaker-offer-footer">
-                        <div id="price-container">
-                            <h5 id="price-tag">1899PLN</h5>
+                <div id="sneaker-example">
+                    <h5 id="sneaker-example-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                    <img id="sneaker-example-preview" src="jordan.png">
+                    <div id="sneaker-example-offer-footer">
+                        <div id="example-price-container">
+                            <h5 id="example-price-tag">1899PLN</h5>
                         </div>
-                        <div id="add-to-basket">
-                            <img id="basket" src="koszyk.png">
+                        <div id="example-add-to-basket">
+                            <img id="example-basket" src="koszyk.png">
                         </div>
                     </div>
-
                 </div>
             </ul>
-
 
         </div>
 
@@ -154,10 +143,35 @@
             </div>
             <div id="footer-socials">
                 <h2 class="footer-title">Social media</h2>
-                <img class="footer-icon" src="instagram.svg"><a class="footer-content">Instagram</a><br>
-                <a class="footer-content">YouTube</a><br>
-                <a class="footer-content">Facebook</a><br>
-                <a class="footer-content">TikTok</a>
+                
+                <p>
+                    <a class="socialmedia-href" href="https://www.instagram.com/grail.point" target="_blank">
+                    <img src="instagram.png">
+                    Instragram
+                    </a>
+                </p>
+
+                <p class="socials-element">
+                    <a class="socialmedia-href" href="https://www.youtube.com/channel/UCWxMO4Rv6kifzfu-_DiNj_w" target="_blank">
+                        <img src="youtube.png">
+                        Youtube
+                    </a>
+                </p>
+
+                <p class="socials-element">
+                    <a class="socialmedia-href" href="https://www.tiktok.com/@grail.point?lang=pl-PL" target="_blank">
+                        <img src="tiktok.png">
+                       Tik tok
+                    </a>
+                </p>
+
+                <p class="socials-element">
+                    <a class="socialmedia-href" href="https://www.facebook.com/grail.point" target="_blank">
+                       <img src="facebook.png">
+                       Facebook
+                    </a>
+                </p>
+
             </div>
             <div id="footer-menu">
                 <h2 class="footer-title">Menu strony</h2>
