poprawki + strona kontakt.html

--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
 
-
+    <link rel="icon" type="image/x-icon" href="logo.ico">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sneaker-Stajnia</title>
+    <title>SneakerStajnia | Strona Główna</title>
 </head>
 <body>
-    <div class="tab-header">
+    <section class="tab-header">
           <a href="#" class="tab-item">STRONA GŁÓWNA</a>
           <a href="sklep.html" class="tab-item">SKLEP</a>
-          <a href="o-nas.html" class="tab-item">O NAS</a>
+          <a href="about.html" class="tab-item">O NAS</a>
           <a href="kontakt.html" class="tab-item">KONTAKT</a>
-    </div>
-    <div id="page-content">
+    </section>
 
-        <div id="welcome-text" class="title-container">
+    <section id="page-content">
+
+        <section id="welcome-text" class="title-container">
             <h1 id="welcome-title">Buty takie, jakie chcesz</h1>
             <a href="sklep.html" id="welcome-subtitle">Sprawdź nasze modele →</a>
-        </div>
+        </section>
 
-        <div class="about-us">
+        <section class="about-us">
             <h2 id="about-us-title">Kim jesteśmy?</h2>
             <ul id="about-us-divide">
                 <div id="about-us-content">
@@ -41,15 +42,15 @@
 
                 <img id="about-us-image" src="lighter.jpeg">
             </ul>
-        </div>
+        </section>
 
-        <div id="example-pairs">
+        <section id="example-pairs">
             <div id="example-pairs-header-container">
                 <h1 id="example-pairs-title">Przykładowe pary</h1>
                 <a id="example-pairs-subtitle" href="">Sprawdź nasze modele →</a>
             </div>
             <br>
-            <ul id="sneaker-example-list">
+            <ul id="sneaker-example-list" style="margin-bottom: -3vw;">
                 <div id="sneaker-example">
                     <h5 id="sneaker-example-title">Jordan 1 Chicago 'Lost and Found'</h5>
                     <img id="sneaker-example-preview" src="jordan.png">
@@ -128,10 +129,10 @@
                 </div>
             </ul>
 
-        </div>
+        </section>
 
 
-        <div id="footer">
+        <section id="footer">
             <div id="footer-contact">
                 <h2 class="footer-title">Sneaker Stajnia Kraków</h2>
                 <div id="kontakt-content">
@@ -186,7 +187,7 @@
                 <a class="footer-content">Polityka prywatności</a><br>
                 <a class="footer-content">Regulamin sklepu</a>
             </div>
-        </div>
+        </section>
 
 
     </div>
