--- a/sklep.html
+++ b/sklep.html
@@ -4,27 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SneakerStajnia | Sklep</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jockey+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="logo.ico">
 </head>
 <body>
 
-    <div class="tab-header">
+    <section class="tab-header">
           <a href="index.html" class="tab-item">STRONA GŁÓWNA</a>
           <a href="#" class="tab-item">SKLEP</a>
-          <a href="o-nas.html" class="tab-item">O NAS</a>
+          <a href="about.html" class="tab-item">O NAS</a>
           <a href="kontakt.html" class="tab-item">KONTAKT</a>
-    </div>
-    <div id="example-pairs">
+    </section>
+
+    <section id="example-pairs">
         <div id="example-pairs-header-container">
             <h1 id="store-title">Nasza oferta butów</h1>
             <a href="index.html" id="back-to-homepage">Powrót do strony głównej →</a>
         </div>
         <br>
+        <ul id="sneaker-offer-list" style="margin-bottom: -3vw;">
+            <div id="sneaker-offer">
+                <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                <img id="sneaker-preview" src="jordan.png">
+
+                <div id="sneaker-offer-footer">
+                    <div id="price-container">
+                        <h5 id="price-tag">1899PLN</h5>
+                    </div>
+                    <div id="add-to-basket">
+                        <a href=""><img id="basket" src="koszyk.png"></a>
+                    </div>
+                </div>
+
+            </div>
+            <div id="sneaker-offer">
+                <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                <img id="sneaker-preview" src="jordan.png">
+
+                <div id="sneaker-offer-footer">
+                    <div id="price-container">
+                        <h5 id="price-tag">1899PLN</h5>
+                    </div>
+                    <div id="add-to-basket">
+                        <a href=""><img id="basket" src="koszyk.png"></a>
+                    </div>
+                </div>
+
+            </div>
+            <div id="sneaker-offer">
+                <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
+                <img id="sneaker-preview" src="jordan.png">
+
+                <div id="sneaker-offer-footer">
+                    <div id="price-container">
+                        <h5 id="price-tag">1899PLN</h5>
+                    </div>
+                    <div id="add-to-basket">
+                        <a href=""><img id="basket" src="koszyk.png"></a>
+                    </div>
+                </div>
+
+            </div>
+        </ul>
         <ul id="sneaker-offer-list">
             <div id="sneaker-offer">
                 <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
@@ -35,7 +81,7 @@
                         <h5 id="price-tag">1899PLN</h5>
                     </div>
                     <div id="add-to-basket">
-                        <img id="basket" src="koszyk.png">
+                        <a href=""><img id="basket" src="koszyk.png"></a>
                     </div>
                 </div>
 
@@ -49,7 +95,7 @@
                         <h5 id="price-tag">1899PLN</h5>
                     </div>
                     <div id="add-to-basket">
-                        <img id="basket" src="koszyk.png">
+                        <a href=""><img id="basket" src="koszyk.png"></a>
                     </div>
                 </div>
 
@@ -63,60 +109,16 @@
                         <h5 id="price-tag">1899PLN</h5>
                     </div>
                     <div id="add-to-basket">
-                        <img id="basket" src="koszyk.png">
+                        <a href=""><img id="basket" src="koszyk.png"></a>
                     </div>
                 </div>
 
             </div>
         </ul>
-        <ul id="sneaker-offer-list">
-            <div id="sneaker-offer">
-                <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
-                <img id="sneaker-preview" src="jordan.png">
-
-                <div id="sneaker-offer-footer">
-                    <div id="price-container">
-                        <h5 id="price-tag">1899PLN</h5>
-                    </div>
-                    <div id="add-to-basket">
-                        <img id="basket" src="koszyk.png">
-                    </div>
-                </div>
-
-            </div>
-            <div id="sneaker-offer">
-                <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
-                <img id="sneaker-preview" src="jordan.png">
-
-                <div id="sneaker-offer-footer">
-                    <div id="price-container">
-                        <h5 id="price-tag">1899PLN</h5>
-                    </div>
-                    <div id="add-to-basket">
-                        <img id="basket" src="koszyk.png">
-                    </div>
-                </div>
-
-            </div>
-            <div id="sneaker-offer">
-                <h5 id="sneaker-offer-title">Jordan 1 Chicago 'Lost and Found'</h5>
-                <img id="sneaker-preview" src="jordan.png">
-
-                <div id="sneaker-offer-footer">
-                    <div id="price-container">
-                        <h5 id="price-tag">1899PLN</h5>
-                    </div>
-                    <div id="add-to-basket">
-                        <img id="basket" src="koszyk.png">
-                    </div>
-                </div>
-
-            </div>
-        </ul>
-    </div>
+    </section>
 
 
-    <div id="footer">
+    <section id="footer">
         <div id="footer-contact">
             <h2 class="footer-title">Sneaker Stajnia Kraków</h2>
             <div id="kontakt-content">
@@ -171,7 +173,7 @@
             <a class="footer-content">Polityka prywatności</a><br>
             <a class="footer-content">Regulamin sklepu</a>
         </div>
-    </div>
+    </section>
     
 </body>
 </html>
